feat: examples and observability docs
